apps/test-app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-app
  namespace: default
  labels:
    app: test-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: test-app
  template:
    metadata:
      labels:
        app: test-app
    spec:
      containers:
      - name: echo-server
        image: hashicorp/http-echo
        args:
          - "-text=Hello from test-app!"
          - "-listen=:8080"
        ports:
        - containerPort: 8080
          name: http
